objects/skuid__Model_Service_Adapter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>skuid__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Namespace__c</fullName>
        <label>Resource Namespace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Data Source Type</label>
</CustomObject>